@@ -28,6 +28,7 @@ import ch.amana.android.cputuner.R;
 import ch.amana.android.cputuner.helper.GeneralMenuHelper;
 import ch.amana.android.cputuner.log.Logger;
 import ch.amana.android.cputuner.model.ConfigurationAutoloadModel;
+import ch.amana.android.cputuner.provider.CpuTunerProvider;
 import ch.amana.android.cputuner.provider.db.DB;
 import ch.amana.android.cputuner.provider.db.DB.ConfigurationAutoload;
 import ch.amana.android.cputuner.service.ConfigurationAutoloadService;
@@ -228,6 +229,10 @@ public class ConfigurationAutoloadListActivity extends ListActivity {
 
 		case R.id.menuItemEdit:
 			startActivity(new Intent(Intent.ACTION_EDIT, uri));
+			return true;
+
+		case R.id.menuItemInsertAsNew:
+			startActivity(new Intent(CpuTunerProvider.ACTION_INSERT_AS_NEW, uri));
 			return true;
 
 		default:
