@@ -8,8 +8,9 @@ V 3.1.3
 * features
 - 
 * bug fixes
-- fixes
- 
+- fixes ICS crashes (should fix HC as well)
+- fix insert as new for configuration autoload
+
 V 3.1.2
 * features
 - 
